cmake_minimum_required(VERSION 3.10)
project(MultiModuleProject)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
#add_executable(MultiModuleProject ${SOURCE_EXE})
add_subdirectory(MathFunctions)
add_subdirectory(StringUtilities)
add_subdirectory(MainApp)
#target_link_libraries(MultiModuleProject MathFunctions StringUtilities)
